--- a/AIResumeProject/AIResumeProject/AIResumeProject.csproj
+++ b/AIResumeProject/AIResumeProject/AIResumeProject.csproj
@@ -7,6 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="local.settings.json" />
+  </ItemGroup>
+  <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="itext" Version="9.5.0" />
     <!-- Application Insights isn't enabled by default. See https://aka.ms/AAt8mw4. -->
@@ -16,6 +19,7 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.2.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http.AspNetCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="2.0.0" />
+    <PackageReference Include="OllamaSharp" Version="5.4.16" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
