Add axios and implement resume upload
Add axios to frontend dependencies and update package-lock. Wire up FileUploadField to POST the selected file to /api/UploadResume (http://localhost:7293) using axios and set Content-Type from the file. Update host.json to enable CORS (Host.CORS = "*") so the frontend can call the API. Also remove an unused FieldDescription import in the component.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@lucide/lab": "^0.1.2",
     "@tailwindcss/vite": "^4.2.0",
+    "axios": "^1.13.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.575.0",
